--- a/dev-resources/log4j.properties
+++ b/dev-resources/log4j.properties
@@ -6,4 +6,5 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ISO8601} %5p %c{1}:%L - %m%n
 
-log4j.logger.flambo=trace
+# uncomment for tracing of fns
+# log4j.logger.flambo=trace
