test for weird stackoverflow error

--- a/dev-resources/log4j.properties
+++ b/dev-resources/log4j.properties
@@ -7,4 +7,4 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ISO8601} %5p %c{1}:%L - %m%n
 
 # uncomment for tracing of fns
-log4j.logger.flambo=trace
+#log4j.logger.flambo=trace
