--- a/dev-resources/log4j.properties
+++ b/dev-resources/log4j.properties
@@ -1,10 +1,10 @@
 # log4j config for clojure development
-log4j.rootLogger=warn, stdout
+log4j.rootLogger=WARN, stdout
 
 # Console appender
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{ISO8601} %5p %c{1}:%L - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%d{ISO8601} %5p %c{2}:%L - %m%n
 
 # uncomment for tracing of fns
-log4j.logger.flambo=trace
+# log4j.logger.flambo=trace
