--- a/dev-resources/log4j.properties
+++ b/dev-resources/log4j.properties
@@ -12,3 +12,4 @@ log4j.logger.org.apache.spark.repl.SparkILoop$SparkILoopInterpreter=INFO
 
 # uncomment for tracing of fns
 # log4j.logger.flambo=trace
+# log4j.logger.serializable.fn=trace
