Rollback accidental log4j and project file changes.

--- a/dev-resources/log4j.properties
+++ b/dev-resources/log4j.properties
@@ -11,4 +11,4 @@ log4j.logger.org.apache.spark.repl.SparkIMain$exprTyper=INFO
 log4j.logger.org.apache.spark.repl.SparkILoop$SparkILoopInterpreter=INFO
 
 # uncomment for tracing of fns
-log4j.logger.serializable.fn=trace
+#log4j.logger.flambo=trace
